2005-08-10  Ben Motmans  <ben.motmans@gmail.com>

	* MonoDevelop.Startup.mdp: references update

2005-08-08  John Luke  <john.luke@gmail.com>

	* Makefile.am: add glade file to EXTRA_DIST to pass distcheck
	
2005-08-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelopMain.cs: Show an error dialog if something goes wrong
	while initializing.

2005-08-03  Ben Motmans  <ben.motmans@gmail.com>

	* MonoDevelopMain.cs: Show a meaningfull error when the local
	hostname cannot be resolved

2005-07-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Startup.glade:
	* Dialogs/AddinLoadErrorDialog.cs: Improved the error dialog.

2005-07-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelopMain.cs: Show an error dialog if there is some error
	while initializing the addins.
	* Dialog/AggregatedProgressMonitor.cs: New dialog for showing addin
	load errors.
	* Makefile.am: Added glade file.

2005-06-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (FILES): Move AssemblyInfo.cs ...
	(GENERATED_FILES): ... here.

2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-04-01	Christian Hergert	<christian.hergert@gmail.com>

	* Makefile.am: fix call to app.config

2005-04-01	Christian Hergert	<christian.hergert@gmail.com>

	* app.config: Add MonoDevelop.exe.config configuration file
	* Makefile.am: Update to include the configuration file

2005-03-10	Christian Hergert	<christian.hergert@gmail.com>

	* MonoDevelopMain.cs: Update the splash screen percentages
	and status messages.

2005-01-27  John Luke  <john.luke@gmail.com>

	* MonoDevelopMain.cs: remove unused code that
	caused warnings

2005-01-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelopMain.cs: Use new api for checking for combine files.

2004-12-03  John Luke  <john.luke@gmail.com>

	* Dialogs/ExceptionDialog.cs: remove obsolete gtype stuff
	* MonoDevelopMain.cs: comment out unused code
	* Makefile.am: remove ExceptionDialog from build
